refactored overlay as it causes  z-index issues

--- a/TheMovieBox/client/src/component/Hero/Hero.module.scss
+++ b/TheMovieBox/client/src/component/Hero/Hero.module.scss
@@ -6,18 +6,11 @@
 .hero {
   position: relative;
   grid-area: hero;
-  &::after {
-    content: "";
-    background: rgba(0, 0, 0, 0.75);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 62vh;
-  }
+
   & img {
     width: 100%;
     height: 62vh !important;
+    filter: hue-rotate(10deg) brightness(15%) grayscale(10%);
   }
 
   & .header {
@@ -79,6 +72,32 @@
       background: transparent;
       border: 1px solid var(--white);
       margin-left: 20px;
+    }
+  }
+}
+
+.darkBG {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+  top: 0;
+  left: 0;
+
+  & .modal {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 10px;
+    height: 500px;
+    z-index: 10000;
+    width: calc(100% - 10%) !important;
+    height: auto !important;
+    transition: visibility, opacity 0.25s;
+    // box-shadow: 0.4rem 0.4rem 2.4rem 0.2rem hsla(236, 50%, 50%, 0.3);
+    & .modalHeader {
+      color: var(--secondary-card-font);
     }
   }
 }
